--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,6 @@
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<% provide(:title, "Help") %>
+<h1>Help</h1>
+<p>Get help on the Ruby on Rails Tutorial at the <%= link_to "Rails Tutorial Help Section", "http://www.railstutorial.org/#help"%>
+</p>
+<p>To get help on this sample app, see the <%= link_to "Ruby on Rails Tutorial Book", "http://www.railstutorial.org/book"%>
+</p>
