--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,10 @@
-<h1>Sample App</h1>
-<p>This is the link for the <%= link_to "Ruby On Rails Tutorial", "http://www.railstutorial.org/" %></p>
+
+<div class="center jumbotron">
+  <h1>Welcome to the Sample App</h1>
+
+  <h2>
+    This is the home page for the <%= link_to "Ruby On Rails Tutorial", "http://www.railstutorial.org/" %> sample application.
+  </h2>
+  <%= link_to "Sign up now!", signup_path, class:"btn btn-primary btn-lg" %>
+</div>
+<%= link_to image_tag("rails.png", alt:"Rails Logo"), "http://rubyonrails.org", class:"img-responsive img-thumbnail" %>
